
Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
------------------------------

Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
------------------------------
#1379108 by cpliakas: Fixed Add the $namespace parameter to the hook_apachesolr_update_index() definition in README.txt.
#1098038 by pwolanin | mgifford: Fixed Did you mean - shouldn't be a <label> element.
#1369192 by pwolanin: In schema rename 'partitioned" handler to "drupal" for consistency with 7.x.
#1320554 by catch: Unnecessary count() in Solr_Base_Query::parse_filters().

Apache Solr Search Integration 6.x-1.6, 2011-11-16
------------------------------
#1097976 by Nick_vh: Fixed wt=xml for Solr 3.x compatibility when viewing admin files.
#1309252 by kevin.dutra, lazysoundsystem | gateway69: Fixed Undefined Index: ts_vid_names() in Apache_Solr.
#901376  by LiuShaz: insure UTF-8 encoding is used for POST searches.
#1224748 by pwolanin, David Lesieur: fix nodeapi params.
#1188824 by craig_: skip apachesolr_cron if in read-only mode.
#1186830 by jp.stacey: db_rewrite_sql on term_hierarchy can lead to invalid SQL.

Apache Solr Search Integration 6.x-1.5, 2011-05-25
------------------------------
#1167722 by pwolanin: fix for Drush command "solr-index" cannot be run.
#1138602 by pwolanin: fix for search block broken in certain block configurations.

Apache Solr Search Integration 6.x-1.4, 2011-05-22
------------------------------
#881760  by pwolanin: remove status messages that are now supplied by Drupal core.
#761990  by jhedstrom, pwolanin: switch to POST for long search ULRs.
#1097988 by jpmckinney, pwolanin: minor config fixes, including Avoiding warning "No queryConverter defined".
#1084332 by pwolanin, elliotttf: follow-up to add missing apachesolr.make
#1141046 by craig_: fix variable name for highlighting.
#1146054 by pwolanin: Remove unneded & (reference) operators for objects.

Apache Solr Search Integration 6.x-1.3, 2011-04-22
------------------------------